@@ -1,3 +1,14 @@
+2008-01-24  Holger Hans Peter Freyther  <holger.freyther@trolltech.com>
+
+        Reviewed by Simon.
+
+        * Assert the presence of the PopupMenuClient
+
+        * platform/qt/QWebPopup.cpp:
+        (WebCore::QWebPopup::QWebPopup):
+        (WebCore::QWebPopup::hideEvent):
+        (WebCore::QWebPopup::activeChanged):
+
 2008-01-23  David Kilzer  <ddkilzer@apple.com>
 
         <rdar://problem/5702947> WebCore: CGContextDrawPDFDocument will be deprecated
